# conservator

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SQLX_POOL_ANALYSIS.md  TOKIO_POSTGRES_MIGRATION_PLAN.md  llm.txt
.github/workflows/: ci.yml  coverage.yml
conservator/: Cargo.toml  integration-testcase.md
conservator/benches/: common.rs  insert.rs  select.rs
conservator/src/: builder.rs  conn.rs  error.rs  executor.rs  expression.rs  field.rs  lib.rs  migrate.rs  value.rs
conservator/src/builder/: delete.rs  insert.rs  mod.rs  select.rs  update.rs
conservator/tests/: integration.rs  migrate_integration.rs  sql_macro_integration.rs  tokio_postgres_integration.rs
conservator/tests/fail/: createable-for-enum.stderr  delete_without_filter.rs  delete_without_filter.stderr  imcompatible_value_type.rs  imcompatible_value_type.stderr  update_without_filter.rs  update_without_filter.stderr  update_without_set.rs  update_without_set.stderr
conservator/tests/integration/: crud.rs  executor_refs.rs  integration-testcase.md  migrate.rs  query_functions.rs  sql_macro.rs  text_enum.rs  vector_types_simple.rs
conservator/tests/pass/: columns_test.rs  custom_type.rs  delete_with_filter.rs  entity_update.rs  insert_builder.rs  selectable_test.rs  simple_delete_builder.rs  simple_delete_builder_in_shortcut.rs  simple_sql_builder.rs  simple_sql_builder_in_shortcut.rs  text_enum.rs  update_with_filter.rs
conservator_macro/: Cargo.toml
conservator_macro/src/: auto.rs  creatable.rs  domain.rs  lib.rs  selectable.rs  sql.rs  text_enum.rs
