[package]
name = "conservator"
description = "conservator is the orm based on sqlx"
version = "0.1.7"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "migrate",
    "postgres",
    "chrono",
    "bigdecimal",
    "uuid",
    "json",
] }
conservator_macro = { version = "0.1", path = "../conservator_macro" }
chrono = "0.4"
bigdecimal = "0.4"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"


[dev-dependencies]
trybuild = "1.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
