[package]
name = "conservator"
description = "conservator is the orm based on tokio-postgres"
version = "0.2.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
migrate = ["sqlx/migrate", "sqlx/postgres"]

[dependencies]
async-trait = "0.1"
sqlx = { version = "0.7", optional = true, features = [
    "runtime-tokio-native-tls",
    "migrate",
    "postgres",
] }
conservator_macro = { version = "0.2", path = "../conservator_macro" }
chrono = "0.4"
bigdecimal = "0.4"
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
tokio-postgres = { version = "0.7.15", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
deadpool-postgres = "0.14.1"
deadpool = "0.12"
thiserror = "1.0"
url = "2.5"


[dev-dependencies]
trybuild = "1.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
tokio = { version = "1", features = ["full"] }
